--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1
 Date: 2015-12-22
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
-Depends: R (>= 3.1.0), ggplot2, grid
+Depends: R (>= 3.1.0), ggplot2 (>= 2.0.0), grid
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
