--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: disp.plot
 Type: Package
 Title: plotting of irregular spaced matrix data with aribitary transformations
-Version: 0.1
+Version: 0.1.1
 Date: 2015-12-22
 Author: Tom Constant
 Maintainer: Tom Constant <spam@spam.com>
 Depends:
     R (>= 3.1.0),
     ggplot2 (>= 2.0.0),
-    grid
+    grid,
+    akima,
+    fields
 Description: plotting of irregular spaced matrix data with aribitary
     transformations
 License: MIT
 LazyData: TRUE
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
